deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: erog-app
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: erog-app
  template:
    metadata:
      labels:
        app: erog-app
    spec:
      containers:
      - name: erog-app
        image: 498765197219.dkr.ecr.us-east-1.amazonaws.com/nodejs:v1.0
        ports:
        - containerPort: 3000
