deployment/service.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app

---
apiVersion: v1
kind: Service
metadata:
  name: erog-app-svc
  namespace: app
spec:
  ports:
  - port: 8080
    targetPort: 3000
  selector:
    app: erog-app
  type: ClusterIP
