deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: erog-app-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
        - pathType: Prefix
          backend:
            service:
              name: erog-app-svc
              port:
                number: 8080
          path: /
